fix: not scrolling on mobile

--- a/src/components/button_primary/style.css
+++ b/src/components/button_primary/style.css
@@ -14,7 +14,7 @@ button{
     color:white;
     background-color:#0097FA;
     font-weight:bold;
-    font-family:'Roboto';
+    font-family: 'Roboto', serif;
     letter-spacing:3px;
     cursor:pointer;
     font-size:18px;
