--- a/src/pages/user/questions-page/style.css
+++ b/src/pages/user/questions-page/style.css
@@ -23,19 +23,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 50px 0;
+    padding: 20px 0;
     row-gap: 30px;
     width: 90%;
     height: 90%;
+    overflow: hidden;
 }
 
 .questions-container-body-answers{
     max-width: 450px;
     width: 100%;
-    max-height: 400px;
-    overflow-y: scroll !important;
     -webkit-overflow-scrolling: touch;
-    padding: 6px 0
+    overflow-y: scroll;
 }
 
 .questions-container-body h3{
@@ -45,14 +44,10 @@
 }
 
 .questions-container-next-button-container{
-    position: absolute;
-    bottom: 0;
-    z-index: 10;
     width: 100%;
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px 0;
 }
 
